--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    persistent_bottom_nav_bar: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
